--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
   <script src="cordova.js"></script>
 
 
+
 </head>
 
 <body ng-app="app">
@@ -37,14 +38,16 @@
   <!-- build:js scripts/app.js -->
   <!-- inject:js -->
   <script src="app/app.module.js"></script>
-  <script src="app/core/core.module.js"></script>
+  <script src="app/templates.module.js"></script>
   <script src="app/tab/tab.module.js"></script>
+  <script src="app/core/core.module.js"></script>
+  <script src="app/templates.js"></script>
   <script src="app/core/app.config.js"></script>
   <script src="app/core/config.route.js"></script>
   <script src="app/tab/account/account.controller.js"></script>
-  <script src="app/tab/dash/dash.controller.js"></script>
   <script src="app/tab/chats/chats.controller.js"></script>
   <script src="app/tab/chats/chats.service.js"></script>
+  <script src="app/tab/dash/dash.controller.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
