change default type
tabs -> sidemenu

--- a/client/index.html
+++ b/client/index.html
@@ -28,10 +28,6 @@
 </head>
 
 <body ng-app="app">
-  <ion-nav-bar class="bar-stable">
-    <ion-nav-back-button>
-    </ion-nav-back-button>
-  </ion-nav-bar>
   <ion-nav-view></ion-nav-view>
 
 
@@ -39,14 +35,19 @@
   <!-- inject:js -->
   <script src="app/app.module.js"></script>
   <script src="app/templates.module.js"></script>
+  <script src="app/chats/chats.module.js"></script>
   <script src="app/core/core.module.js"></script>
-  <script src="app/tab/tab.module.js"></script>
+  <script src="app/dash/dash.module.js"></script>
+  <script src="app/main/main.module.js"></script>
+  <script src="app/setting/setting.module.js"></script>
+  <script src="app/chats/chats.controller.js"></script>
+  <script src="app/chats/chats.service.js"></script>
   <script src="app/core/app.config.js"></script>
   <script src="app/core/config.route.js"></script>
-  <script src="app/tab/account/account.controller.js"></script>
-  <script src="app/tab/chats/chats.controller.js"></script>
-  <script src="app/tab/chats/chats.service.js"></script>
-  <script src="app/tab/dash/dash.controller.js"></script>
+  <script src="app/core/core.controller.js"></script>
+  <script src="app/dash/dash.controller.js"></script>
+  <script src="app/main/main.controller.js"></script>
+  <script src="app/setting/setting.controller.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
