--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
+  <title>Ionic Boilerplate Project</title>
 
-  <link href="css/ionic.app.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
   <!-- inject:css -->
+  <link rel="stylesheet" href="css/dev.css">
+  <link rel="stylesheet" href="css/ionic.app.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- endinject -->
 
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -34,7 +35,6 @@
   <!-- build:js scripts/app.js -->
   <!-- inject:js -->
   <script src="app/app.module.js"></script>
-  <script src="app/templates.module.js"></script>
   <script src="app/chats/chats.module.js"></script>
   <script src="app/core/core.module.js"></script>
   <script src="app/dash/dash.module.js"></script>
