--- a/html/pages/main.html
+++ b/html/pages/main.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Publish Test</title>
-    <!-- <link href="css/ionic.app.css" rel="stylesheet"> -->
+    <title>Home</title>
+    <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Publish</h1>
-    <table>
-      <tr>
-        <th><a href="pages/main.html">메인페이지</a></th>
-        <td>dsfasfd</td>
-      </tr>
-    </table>
+    <h1>메인페이지 시안</h1>
   </body>
 </html>
