--- a/client/index.html
+++ b/client/index.html
@@ -35,19 +35,20 @@
   <!-- build:js scripts/app.js -->
   <!-- inject:js -->
   <script src="app/app.module.js"></script>
-  <script src="app/core/core.module.js"></script>
   <script src="app/chats/chats.module.js"></script>
+  <script src="app/core/core.module.js"></script>
   <script src="app/dash/dash.module.js"></script>
-  <script src="app/main/main.module.js"></script>
   <script src="app/setting/setting.module.js"></script>
+  <script src="app/main/main.module.js"></script>
+  <script src="app/chats/chat.controller.js"></script>
+  <script src="app/chats/chats.controller.js"></script>
+  <script src="app/chats/chats.service.js"></script>
   <script src="app/core/app.config.js"></script>
   <script src="app/core/config.route.js"></script>
   <script src="app/core/core.controller.js"></script>
-  <script src="app/chats/chats.controller.js"></script>
-  <script src="app/chats/chats.service.js"></script>
   <script src="app/dash/dash.controller.js"></script>
-  <script src="app/main/main.controller.js"></script>
   <script src="app/setting/setting.controller.js"></script>
+  <script src="app/main/main.controller.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
