--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,8 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
+  <script src="routes.js"></script>
+
 
 
 </head>
@@ -35,20 +37,22 @@
   <!-- build:js scripts/app.js -->
   <!-- inject:js -->
   <script src="app/app.module.js"></script>
-  <script src="app/chats/chats.module.js"></script>
   <script src="app/core/core.module.js"></script>
+  <script src="app/chats/chats.module.js"></script>
   <script src="app/dash/dash.module.js"></script>
-  <script src="app/setting/setting.module.js"></script>
   <script src="app/main/main.module.js"></script>
-  <script src="app/chats/chat.controller.js"></script>
-  <script src="app/chats/chats.controller.js"></script>
-  <script src="app/chats/chats.service.js"></script>
+  <script src="app/page/page.module.js"></script>
+  <script src="app/setting/setting.module.js"></script>
   <script src="app/core/app.config.js"></script>
   <script src="app/core/config.route.js"></script>
   <script src="app/core/core.controller.js"></script>
+  <script src="app/chats/chat.controller.js"></script>
+  <script src="app/chats/chats.controller.js"></script>
+  <script src="app/chats/chats.service.js"></script>
   <script src="app/dash/dash.controller.js"></script>
-  <script src="app/setting/setting.controller.js"></script>
   <script src="app/main/main.controller.js"></script>
+  <script src="app/setting/setting.controller.js"></script>
+  <script src="app/page/index/index.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
