--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,6 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- endinject -->
 
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
   <!-- build:js scripts/vendor.js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -25,7 +22,7 @@
   <script src="cordova.js"></script>
 
   <script src="routes.js"></script>
-
+  <script src="env.js"></script>
 
 
 </head>
@@ -38,20 +35,20 @@
   <!-- inject:js -->
   <script src="app/app.module.js"></script>
   <script src="app/core/core.module.js"></script>
-  <script src="app/chats/chats.module.js"></script>
   <script src="app/dash/dash.module.js"></script>
-  <script src="app/main/main.module.js"></script>
   <script src="app/page/page.module.js"></script>
+  <script src="app/main/main.module.js"></script>
   <script src="app/setting/setting.module.js"></script>
+  <script src="app/chats/chats.module.js"></script>
   <script src="app/core/app.config.js"></script>
   <script src="app/core/config.route.js"></script>
   <script src="app/core/core.controller.js"></script>
-  <script src="app/chats/chat.controller.js"></script>
-  <script src="app/chats/chats.controller.js"></script>
-  <script src="app/chats/chats.service.js"></script>
   <script src="app/dash/dash.controller.js"></script>
   <script src="app/main/main.controller.js"></script>
   <script src="app/setting/setting.controller.js"></script>
+  <script src="app/chats/chat.controller.js"></script>
+  <script src="app/chats/chats.controller.js"></script>
+  <script src="app/chats/chats.service.js"></script>
   <script src="app/page/index/index.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
