--- a/www/index.html
+++ b/www/index.html
@@ -12,15 +12,14 @@
   <link rel="stylesheet" href="css/style.css">
   <!-- endinject -->
 
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
   <script src="scripts/vendor.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
+  <script src="routes.js"></script>
+  <script src="env.js"></script>
 
 
 </head>
