--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,5 @@
-<ion-view>
-  <h1>Home</h1>
-  <ul>
-    <li><button type="button" class="button" ui-sref="app.dash">Dash</button></li>
-  </ul>
+<ion-view title="HOME">
+    <ion-content>
+        <H2>HOME</H2>
+    </ion-content>
 </ion-view>
