--- a/client/index.html
+++ b/client/index.html
@@ -36,8 +36,8 @@
     <script src="app/completion/completion.module.js"></script>
     <script src="app/core/core.module.js"></script>
     <script src="app/main/main.module.js"></script>
-    <script src="app/map/map.module.js"></script>
     <script src="app/order/order.module.js"></script>
+    <script src="app/map/map.module.js"></script>
     <script src="app/templates/templates.module.js"></script>
     <script src="app/completion/dataParse.service.js"></script>
     <script src="app/core/app.config.js"></script>
@@ -45,35 +45,36 @@
     <script src="app/core/core.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/order/dataparse.service.js"></script>
-    <script src="app/completion/completionRegister/completionRegister.controller.js"></script>
-    <script src="app/completion/completionRegister/completionRegister.service.js"></script>
     <script src="app/completion/detail/detail.controller.js"></script>
     <script src="app/completion/detail/detail.service.js"></script>
+    <script src="app/completion/completionRegister/completionRegister.controller.js"></script>
+    <script src="app/completion/completionRegister/completionRegister.service.js"></script>
     <script src="app/completion/list/list.controller.js"></script>
     <script src="app/completion/note/note.controller.js"></script>
     <script src="app/completion/note/note.service.js"></script>
     <script src="app/completion/reconstruct/reconstruct.controller.js"></script>
     <script src="app/completion/reconstruct/reconstruct.service.js"></script>
-    <script src="app/order/completeRegister/completeRegister.controller.js"></script>
-    <script src="app/order/completeRegister/completeRegister.service.js"></script>
     <script src="app/completion/search/search.controller.js"></script>
     <script src="app/completion/search/search.service.js"></script>
-    <script src="app/order/completeRegisterConfirm/completeRegisterConfirm.controller.js"></script>
-    <script src="app/order/completeRegisterConfirm/completeRegisterConfirm.service.js"></script>
+    <script src="app/order/completeRegister/completeRegister.controller.js"></script>
+    <script src="app/order/completeRegister/completeRegister.service.js"></script>
     <script src="app/order/constructionFinishCheck/constructionFinishCheck.controller.js"></script>
     <script src="app/order/constructionFinishCheck/constructionFinishCheck.service.js"></script>
+    <script src="app/order/completeRegisterConfirm/completeRegisterConfirm.controller.js"></script>
+    <script src="app/order/completeRegisterConfirm/completeRegisterConfirm.service.js"></script>
     <script src="app/order/customerSign/customerSign.controller.js"></script>
     <script src="app/order/customerSign/customerSign.service.js"></script>
-    <script src="app/order/detail/detail.controller.js"></script>
-    <script src="app/order/detail/detail.service.js"></script>
     <script src="app/order/demolishMaterial/demolishMaterial.controller.js"></script>
     <script src="app/order/demolishMaterial/demolishMaterial.service.js"></script>
+    <script src="app/order/detail/detail.controller.js"></script>
+    <script src="app/order/detail/detail.service.js"></script>
+    <script src="app/order/search/search.controller.js"></script>
+    <script src="app/order/search/search.service.js"></script>
     <script src="app/order/list/list.controller.js"></script>
     <script src="app/map/map/map.controller.js"></script>
     <script src="app/map/map/map.service.js"></script>
     <script src="app/templates/popoverMenu/popoverMenu.js"></script>
-    <script src="app/order/search/search.controller.js"></script>
-    <script src="app/order/search/search.service.js"></script>
+    <script src="app/map/map/map.directive.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 
