--- a/www/index.html
+++ b/www/index.html
@@ -2,33 +2,31 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>Ionic Boilerplate Project</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title>Ionic Boilerplate Project</title>
 
-  <!-- inject:css -->
-  <link rel="stylesheet" href="css/dev.css">
-  <link rel="stylesheet" href="css/ionic.app.css">
-  <link rel="stylesheet" href="css/style.css">
-  <!-- endinject -->
-
-
-  <script src="scripts/vendor.js"></script>
-
-  <!-- cordova script (this will be a 404 during development) -->
-  <script src="cordova.js"></script>
-
-  <script src="routes.js"></script>
-  <script src="env.js"></script>
+    <!-- inject:css -->
+    <link rel="stylesheet" href="css/dev.css">
+    <link rel="stylesheet" href="css/ionic.app.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- endinject -->
 
 
+    <script src="scripts/vendor.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
+    <!--<script src="cordova.js"></script>-->
+
+    <script src="routes.js"></script>
+    <script src="env.js"></script>
+    <script src="//apis.daum.net/maps/maps3.js?apikey=8b68e1b32a2d4ff743bce177dea7b80a"></script>
 </head>
 
 <body ng-app="app">
-  <ion-nav-view></ion-nav-view>
+    <ion-nav-view></ion-nav-view>
 
-
-  <script src="scripts/app.js"></script>
+    <script src="scripts/app.js"></script>
 
 
 </body>
